--- a/Arthur_Antics.html
+++ b/Arthur_Antics.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <link href="Antics.css" rel="stylesheet" type="text/css" />
@@ -10,12 +9,11 @@
 <a href="Antics.js" rel = "js" type = "text/js"></a>
 <a href="Antics.css" rel = "stylesheet" type = "text/css"></a>
 <h1>Arthur's Antics</h1>
-<h2>Hey, you never know!</h2>
+<h2>Hey, You never know!</h2>
 <h1 color = white>Brought to you by Sleepy's, Eat Fresh!</h1>
 <h2 id = "container">Try to match what someone else says or not at all! Play up to 10, 20, 30 ,40, 0r 50</h2>
 <h3 id = "nav">Wager your amount of points you want to gamble. Cannot be more than 5 points. And must be different for each question. You can Dual someone! When you Dual, You try to Match while the Dualer tries not to match, if you WIN the dual, the opponent loses half there points and cannot play for a round. If you LOSE the Dual, you lose ALL your points.</h3>
 </div></body>
-
 <h2 id = container>Goal for Turn: <div><button type = button id = "rule1" onclick = "chooseGoal()">Turn number</input></div>
 	<!--- <p id = "rule1" onclick = "chooseGoal()">0</p> --->
 	</h2>
@@ -52,7 +50,7 @@
 		<td><input type="text" size="25" value="1" id="count"></td>
 		<td><input type = radio></input></td>
 		</tr>
-		<td id = enterName4>Ferguson</td>
+		<td id = enterName4>Fergie</td>
 		<td><input type="text" size="25" value="1" id="count"></td>
 		<td><input type="text" size="25" value="1" id="count"></td>
 		<td><input type = radio></input></td>
